--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.6"
+  },
+  "engines":{
+    "node": "10.9.0",
+    "npm": "6.2.0"
+  },
+  "scriptS": {
+    "heroku-postbuild": "webpack",
   }
 }
