--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "heroku-postbuild": "webpack",
+    "build": "webpack",
+    "watch": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "popper.js": "^1.14.4",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@types/autoprefixer": "^6.7.3",
     "@types/node": "^10.9.2",
     "@types/react": "^16.4.12",
     "@types/react-dom": "^16.0.7",
+    "@types/react-router": "^4.0.30",
+    "@types/react-router-dom": "^4.3.0",
     "@types/webpack": "^4.4.11",
     "autoprefixer": "^9.1.3",
     "awesome-typescript-loader": "^5.2.0",
@@ -30,18 +38,17 @@
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
+    "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
     "to-string-loader": "^1.1.5",
     "typescript": "^3.0.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.6"
   },
-  "engines":{
+  "engines": {
     "node": "10.9.0",
     "npm": "6.2.0"
-  },
-  "scripts": {
-    "heroku-postbuild": "webpack"
   }
 }
