--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@githubprimer/octicons-react": "^8.0.0",
     "bootstrap": "^4.1.3",
     "popper.js": "^1.14.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-icons": "^3.0.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   },
@@ -33,16 +35,19 @@
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "expose-loader": "^0.7.5",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "to-string-loader": "^1.1.5",
     "typescript": "^3.0.1",
+    "url-loader": "^1.1.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.6"
